--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8">
     </head>
     <body>
-        <img src="C:\Users\user\Desktop\code\bmw.jpeg"alt="画像"/>
+        <img src="bmw.jpeg"alt="画像"/>
         <h1>BMW　X1</h1>
 
         <a href="file:///C:/Users/user/Desktop/code/page2.html"><p>カスタム</p></a>
