--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="https://github.com/guccipf67/gucci/blob/main/bmw.jpeg?raw=true"alt="画像"/>
         <h1>BMW　X1</h1>
 
-        <a href="file:///C:/Users/user/Desktop/code/page2.html"><p>カスタム</p></a>
+        <a href="page2.html"><p>カスタム</p></a>
 
         <p>景色</p>
 
